WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108417
DFG bytecode parser should have more assertions about the status of local accesses
https://bugs.webkit.org/show_bug.cgi?id=108417
Summary
DFG bytecode parser should have more assertions about the status of local acc...
Filip Pizlo
Reported
2013-01-30 19:07:21 PST
Patch forthcoming.
Attachments
the patch
(3.11 KB, patch)
2013-01-30 19:08 PST
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-01-30 19:08:54 PST
Created
attachment 185657
[details]
the patch
Mark Hahnenberg
Comment 2
2013-01-30 19:15:28 PST
Comment on
attachment 185657
[details]
the patch r=me
Filip Pizlo
Comment 3
2013-01-30 19:16:06 PST
Landed in
http://trac.webkit.org/changeset/141364
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug