DFG bytecode parser should have more assertions about the status of local accesses https://bugs.webkit.org/show_bug.cgi?id=108417

Reviewed by Mark Hahnenberg.
        
Assert some things that we already know to be true, just to reassure ourselves that they are true.
This is meant as a prerequisite for https://bugs.webkit.org/show_bug.cgi?id=108414, which will
make these rules even stricter.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::getLocal):
(JSC::DFG::ByteCodeParser::getArgument):



git-svn-id: svn://svn.chromium.org/blink/trunk@141364 bbb929c8-8fbe-4397-9dbb-9b2b20218538